--- a/src/app/share/wy-ui/wy-player/wy-player.component.html
+++ b/src/app/share/wy-ui/wy-player/wy-player.component.html
@@ -1,4 +1,7 @@
-<div class="m-player" (click)="selfClick = true">
+<div class="m-player"
+  appClickoutside
+  [bindFlag]="bindFlag"
+  (onClickOutSide)="onClickOutSide()">
   <div class="lock">
     <div class="left"><i></i></div>
   </div>
@@ -42,13 +45,24 @@
       <div class="ctrl">
         <i class="volume" title="音量" (click)="toggleVolPanel($event)"></i>
         <i [ngClass]="currentMode.type" [title]="currentMode.label" (click)="changeMode()"></i>
-        <p class="open">
+        <p class="open" (click)="toggleListPanel()">
           <span></span>
         </p>
         <div class="control-vol" [hidden]="!showVolumnPanel">
           <app-wy-slider [wyVertical]="true" [(ngModel)]="volume" (ngModelChange)="onVolumeChange($event)"></app-wy-slider>
         </div>
       </div>
+      <app-wy-player-panel
+        [playing]="playing"
+        [songList]="songList"
+        [currentSong]="currentSong"
+        [show]="showPanel"
+        (onChangeSong)="onChangeSong($event)"
+        (onDeleteSong)="onDeleteSong($event)"
+        (onClearSong)="onClearSong()"
+        (onClose)="showPanel = false"
+      >
+      </app-wy-player-panel>
     </div>
   </div>
 
